WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
62005
Zooming <object style="width/height: auto" data="foo.svg"/> doesn't work as expected
https://bugs.webkit.org/show_bug.cgi?id=62005
Summary
Zooming <object style="width/height: auto" data="foo.svg"/> doesn't work as e...
Nikolas Zimmermann
Reported
2011-06-03 04:49:28 PDT
Zooming <object style="width/height: auto" data="foo.svg"/> doesn't work as expected. Simple fix coming.
Attachments
Patch
(107.03 KB, patch)
2011-06-03 04:59 PDT
,
Nikolas Zimmermann
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Nikolas Zimmermann
Comment 1
2011-06-03 04:59:20 PDT
Created
attachment 95890
[details]
Patch
Andreas Kling
Comment 2
2011-06-03 05:07:40 PDT
Comment on
attachment 95890
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=95890&action=review
Makes sense, r=me.
> Source/WebCore/ChangeLog:10 > + zoom in the RenderStzle instead of asking SVGSVGElement.
Typo, RenderStyle.
Nikolas Zimmermann
Comment 3
2011-06-03 05:11:59 PDT
Landed in
r88007
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug