2011-06-03  Nikolas Zimmermann  <nzimmermann@rim.com>

Reviewed by Andreas Kling.

        Zooming <object style="width/height: auto" data="foo.svg"/> doesn't work as expected
        https://bugs.webkit.org/show_bug.cgi?id=62005

        Zooming an object with auto size, that references a svg with fixed size was broken. The svg size stayed the same.
        Added new tests covering this zooming.

        * platform/mac/svg/zoom/page/zoom-svg-through-object-with-absolute-size-2-expected.png:
        * platform/mac/svg/zoom/page/zoom-svg-through-object-with-absolute-size-2-expected.txt:
        * platform/mac/svg/zoom/page/zoom-svg-through-object-with-absolute-size-expected.png:
        * platform/mac/svg/zoom/page/zoom-svg-through-object-with-absolute-size-expected.txt:
        * platform/mac/svg/zoom/page/zoom-svg-through-object-with-auto-size-expected.png: Added.
        * platform/mac/svg/zoom/page/zoom-svg-through-object-with-auto-size-expected.txt: Added.
        * svg/zoom/page/resources/circle.svg: Added.
        * svg/zoom/page/zoom-svg-through-object-with-auto-size.html: Added.

2011-06-03  Nikolas Zimmermann  <nzimmermann@rim.com>

        Reviewed by Andreas Kling.

        Zooming <object style="width/height: auto" data="foo.svg"/> doesn't work as expected
        https://bugs.webkit.org/show_bug.cgi?id=62005

        Zooming an object with auto size, that references a svg with fixed size was broken. The svg size stayed the same.
        Get rid of the dependency between RenderSVGRoot and SVGSVGElement::currentScale(), always ask for the effective
        zoom in the RenderStyle instead of asking SVGSVGElement.

        The SVGSVGElement::currentScale()/setCurrentScale() methods are now only used when called from the bindings (eg. JS).
        They only take effect on the outermost <svg> element in standalone documents, otherwhise they are no-ops.

        Test: svg/zoom/page/zoom-svg-through-object-with-auto-size.html

        * rendering/svg/RenderSVGRoot.cpp:
        (WebCore::RenderSVGRoot::computeIntrinsicWidth):
        (WebCore::RenderSVGRoot::computeIntrinsicHeight):
        (WebCore::RenderSVGRoot::localToBorderBoxTransform):
        * svg/SVGSVGElement.cpp:
        (WebCore::SVGSVGElement::SVGSVGElement):
        (WebCore::SVGSVGElement::currentScale):
        (WebCore::SVGSVGElement::setCurrentScale):
        * svg/SVGSVGElement.h:


Canonical link: https://commits.webkit.org/77472@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@88007 268f45cc-cd09-0410-ab3c-d52691b4dbfc