Source/WebCore/svg/SVGSVGElement.h
@@ -171,7 +171,6 @@ private:
     bool m_useCurrentView;
     RefPtr<SMILTimeContainer> m_timeContainer;
     FloatPoint m_translation;
-    float m_scale;
     mutable OwnPtr<SVGViewSpec> m_viewSpec;
     IntSize m_containerSize;
     bool m_hasSetContainerSize;
